@@ -198,7 +198,12 @@ class Vala.Compiler : Object {
 			if (FileUtils.test (source, FileTest.EXISTS)) {
 				var rpath = realpath (source);
 				if (source.has_suffix (".vala") || source.has_suffix (".gs")) {
-					context.add_source_file (new SourceFile (context, rpath));
+					var source_file = new SourceFile (context, rpath);
+
+					// import the GLib namespace by default (namespace of backend-specific standard library)
+					source_file.add_using_directive (new NamespaceReference ("GLib"));
+
+					context.add_source_file (source_file);
 				} else if (source.has_suffix (".vapi")) {
 					context.add_source_file (new SourceFile (context, rpath, true));
 				} else if (source.has_suffix (".c")) {
